<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5">

            <com.google.android.exoplayer2.ui.PlayerView
                android:id="@+id/playerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:resize_mode="fill" />

            <ImageView
                android:contentDescription="@string/video_replacement_image_content_description"
                android:id="@+id/empty_image_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:scaleType="fitXY" />

        </FrameLayout>

        <TextView
            android:id="@+id/no_video_text_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="10dp"
            android:textColor="#2E7D32"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="@string/no_video_or_image_message" />
    </LinearLayout>

    <TextView
        tools:textColor="#FFFFFF"
        android:gravity="center"
        tools:text="NO INTERNET"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</FrameLayout>